--- a/src/index.css
+++ b/src/index.css
@@ -47,3 +47,30 @@ button {
   box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.25);
   text-transform: uppercase;
 }
+
+.title {
+  margin-top: 150px;
+  text-align: center;
+  color: #373737;
+}
+
+.title {
+  animation-duration: 2s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  0% {
+    transform: scale(0.5);
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1.2);
+    opacity: 0;
+  }
+}
